--- a/Lektion12.Web/Views/Product/Edit.cshtml
+++ b/Lektion12.Web/Views/Product/Edit.cshtml
@@ -6,9 +6,6 @@
 
 <h2>Edit</h2>
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
@@ -39,13 +36,12 @@
             @Html.EditorFor(m => Model.Product.Price)
             @Html.ValidationMessageFor(m => Model.Product.Price)
         </div>
-
         <div class="editor-label">
             @Html.LabelFor(m => Model.Product.Category)
         </div>
         <div class="editor-field">
-            @Html.DropDownList("Category", Model.Categories)
-            @Html.DropDownListFor(c => c.SelectedID, Model.Subcategories)
+            @Html.DropDownListFor(c => c.CategoryID, Model.Categories)
+            @Html.DropDownListFor(c => c.SubCategoryID, Model.Subcategories)
         </div>
 
         <p>
@@ -59,19 +55,29 @@
 </div>
 
 @section Scripts {
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.globalize/globalize.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.globalize/cultures/globalize.culture.se.js")" type="text/javascript"></script>
 <script type="text/javascript">
-    $(function () { 
-        $('#SelectedID').val(@Model.Product.CategoryID); 
-        $('#Category').change(function() { 
-            var url = "@Url.Content("~/API/Subcategories/")" + $('#Category').val(); 
-            $.getJSON(url, function(data) { 
-                var items = ""; 
-                $.each(data, function(i, category) { 
-                    items += "<option value='" + category.CategoryID + "'>" + category.Name + "</option>"; 
-                }); 
-                $('#SelectedID').html(items); 
-            }); 
-        }); 
+    $.validator.methods.number = function (value, element) { // Ny funktion för globalization - inplockade med NuGet - sök på "globalization". Se de två script-filerna ovan
+        return this.optional(element) || !isNaN(Globalize.parseFloat(value));
+    }
+
+    $(function () {
+        Globalize.culture('se'); // Ny rad för globalization
+
+        $('#CategoryID').change(function () {
+            var url = "@Url.Content("~/API/Subcategories/")" + $('#Category').val();
+ 
+            $.getJSON(url, function(data) {
+                var items = "";
+                $.each(data, function(i, category) {
+                    items += "<option value='" + category.CategoryID + "'>" + category.Name + "</option>";
+                });
+                $('#SubCategoryID').html(items);
+            });
+        });
     });
 </script>
 }
